# Collect-high-school-exam-scores-2021

./: README.md
check/: 10_check.txt  11_check.txt  12_check.txt  13_check.txt  14_check.txt  15_check.txt  16_check.txt  17_check.txt  18_check.txt  19_check.txt  1_check.txt  20_check.txt  21_check.txt  22_check.txt  23_check.txt  24_check.txt  25_check.txt  26_check.txt  27_check.txt  45_check.txt
data/: 10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  45.csv  46.csv  47.csv  48.csv  49.csv  (+20 more)
scrap_data/: crawl.py  test.py
scrap_data/test_hoang/: Cargo.toml  Cross.toml  pyproject.toml
scrap_data/test_hoang/src/: lib.rs
